# fmt-test

./: .pre-commit-config.yaml  .python-version  README.md  pyproject.toml  requirements.txt  settings.py
service/: data_uploader.py  image_collector.py  scheduler.py
types/: __init__.py
